--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -23,9 +23,8 @@ server {
 
     # When a user visits the base URL rather than a particular application,
         # an index of the applications available in this directory will be shown.
-	    directory_index off;
+	    directory_index on;
 	    app_idle_timeout  1200;
-
 
 	      }
 	   }
